compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@constant_folding__builtin_sqrt_negative.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/constant_folding/builtin_sqrt_negative.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = fix 0
temp.8 = fix 1
temp.9 = temp.7 - temp.8
temp.10 = builtin sqrt(temp.9)
r.11 = temp.10
temp.12 = r.11
storeprop temp.12, 0
return 


----------- constant_folding -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = fix 0
temp.8 = fix 1
temp.9 = fix -1
temp.10 = builtin sqrt(temp.9)
r.11 = temp.10
temp.12 = r.11
storeprop temp.12, 0
return 


----------- warnings -------------
[W0003] Warning: Call to 'sqrt' will fail at runtime
   ╭─[ builtin_sqrt_negative.tapir:8:9 ]
   │
 8 │ var r = sqrt(0.0 - 1.0);
   │         ───────┬───────  
   │                ╰───────── This operation will fail
───╯
