compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@constant_folding__fix_upgrading.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/constant_folding/fix_upgrading.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getprop temp.7, 0
temp.8 = fix 5
temp.9 = temp.7 f* temp.8
storeprop temp.9, 0
wait
temp.10 = fix 5
getprop temp.11, 0
temp.12 = temp.10 f* temp.11
storeprop temp.12, 0
return 


----------- constant_folding -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getprop temp.7, 0
temp.8 = fix 5
temp.13 = int 5
temp.9 = temp.7 * temp.13
storeprop temp.9, 0
wait
temp.10 = fix 5
getprop temp.11, 0
temp.14 = int 5
temp.12 = temp.14 * temp.11
storeprop temp.12, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getprop temp.7, 0
temp.13 = int 5
temp.9 = temp.7 * temp.13
storeprop temp.9, 0
wait
getprop temp.11, 0
temp.14 = int 5
temp.12 = temp.14 * temp.11
storeprop temp.12, 0
return
