compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@constant_folding__mulitply_by_zero.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/constant_folding/mulitply_by_zero.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getprop temp.7, 0
temp.8 = int 0
temp.9 = temp.7 * temp.8
storeprop temp.9, 0
wait
temp.10 = int 0
getprop temp.11, 0
temp.12 = temp.10 * temp.11
storeprop temp.12, 0
return 


----------- constant_folding -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getprop temp.7, 0
temp.8 = int 0
temp.9 = int 0
storeprop temp.9, 0
wait
temp.10 = int 0
getprop temp.11, 0
temp.12 = int 0
storeprop temp.12, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.9 = int 0
storeprop temp.9, 0
wait
temp.12 = int 0
storeprop temp.12, 0
return
